# alvarium-rust-sdk

./: .gitignore  Cargo.toml
resources/: iota_streams_config.json  mqtt_stream_config.json  test_config.json
src/: constants.rs  errors.rs  lib.rs  logging.rs  main.rs  sdk.rs
src/annotations/: mod.rs
src/annotations/annotators/: mod.rs  pki.rs  source.rs  tls.rs  tpm.rs  utility.rs
src/annotations/contracts/: annotation.rs  mod.rs
src/config/: hash.rs  mod.rs  sdk.rs  sign.rs
src/config/stream/: iota_streams.rs  mod.rs  mqtt.rs
src/factories/: annotator_factory.rs  hash_factory.rs  mod.rs  signature_factory.rs  stream_factory.rs
src/iota/: mod.rs  publisher.rs
src/providers/hash_provider/: md5_provider.rs  mod.rs  none_provider.rs  sha256_provider.rs
src/providers/sign_provider/: ed25519.rs  mod.rs
src/providers/stream_provider/: iota.rs  mod.rs  mqtt.rs
