[package]
name = "alvarium-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5-rs = "0.1.5"
hex = "0.4.3"
streams = { git = "https://github.com/iotaledger/streams", branch = "v2.0-dev", default-features = false, features = ["tangle-client"]}
serde = "1.0.143"
serde_json = "1.0.83"
gethostname = "0.2.3"
rand = { version = "0.8.5" }
ulid = "1.0.0"
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "f6f88fc", features = ["ed25519", "sha", "random"]}